5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1712_2504.log
== TEST (2019-05-15 09:08:51) 
-- CODE:
cop = int(input("Insira a quantidade de virus: "))
ini = int(input("Quantidade inicial de leucocitos: "))
P_cop = int(input("Insira o percentual  de virius: "))
P_ini = int(input("Insira o percentual de leucocitos: "))

x = 0  #var. Acumul. 
y = 0  # Var. Acuml.
i = 0  #Var. Cont.

while(ini*2 > cop):
	
-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 09:16:23) 
-- CODE:
cop = int(input("Insira a quantidade de virus: "))
ini = int(input("Quantidade inicial de leucocitos: "))
P_cop = int(input("Insira o percentual  de virius: "))
P_ini = int(input("Insira o percentual de leucocitos: "))

x = cop #var. Acumul. 
y = ini  # Var. Acuml.
i = 0  #Var. Cont.

while(ini*2 > cop):
	x = cop * P_cop / 100
	cop = cop + x
	y = ini * P_ini / 100
	ini = ini + 1
	i = i + 1
print(i)	
	
	
	
-- EXECUTION TIME:
0.138747
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
0
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
0
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 09:16:23) 
-- CODE:
cop = int(input("Insira a quantidade de virus: "))
ini = int(input("Quantidade inicial de leucocitos: "))
P_cop = int(input("Insira o percentual  de virius: "))
P_ini = int(input("Insira o percentual de leucocitos: "))

x = cop #var. Acumul. 
y = ini  # Var. Acuml.
i = 0  #Var. Cont.

while(ini*2 > cop):
	x = cop * P_cop / 100
	cop = cop + x
	y = ini * P_ini / 100
	ini = ini + 1
	i = i + 1
print(i)	
	
	
	
-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:15:26) 
-- CODE:
cop = int(input("Insira a quantidade de virus: "))
ini = int(input("Quantidade inicial de leucocitos: "))
P_cop = float(input("Insira o percentual  de virius: "))
P_ini = float(input("Insira o percentual de leucocitos: "))

x = cop #var. Acumul. 
y = ini  # Var. Acuml.
i = 0  #Var. Cont.

while(ini*2 > cop):
	x = cop * P_cop / 100
	cop = cop + x
	y = ini * P_ini / 100
	ini = ini + 1
	i = i + 1
print(i)	
	
	
	
-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:16:41) 
-- CODE:
cop = int(input("Insira a quantidade de virus: "))
ini = int(input("Quantidade inicial de leucocitos: "))
P_cop = float(input("Insira o percentual  de virius: "))
P_ini = float(input("Insira o percentual de leucocitos: "))

x = 0 #var. Acumul. 
y = 0  # Var. Acuml.
i = 0  #Var. Cont.

while(ini*2 > cop):
	x = cop * P_cop / 100
	cop = cop + x
	y = ini * P_ini / 100
	ini = ini + 1
	i = i + 1
print(i)	
	
	
	
-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:20:03) 
-- CODE:
cop = int(input("Insira a quantidade de virus: "))
ini = int(input("Quantidade inicial de leucocitos: "))
P_cop = float(input("Insira o percentual  de virius: "))
P_ini = float(input("Insira o percentual de leucocitos: "))

z = 0 #var. Acumul. 
k = 0  # Var. Acuml.
i = 0  #Var. Cont.

while(ini*2 > cop):
	x = cop * P_cop / 100
	z = cop + x
	y = ini * P_ini / 100
	k = ini + 1
	i = i + 1
print(i)	
	
	
	
-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:30:58) 
-- CODE:
cop = int(input("Insira a quantidade de virus: "))
ini = int(input("Quantidade inicial de leucocitos: "))
P_cop = float(input("Insira o percentual  de virius: "))
P_ini = float(input("Insira o percentual de leucocitos: "))

i = 0  #Var. Cont.

while(ini < 2 * cop):
	x = cop * P_cop / 100
	z = cop + x
	y = ini * P_ini / 100
	k = ini + y
	i = i + 1
print(i)	
	
	
	
-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:32:20) 
-- CODE:
cop = int(input("Insira a quantidade de virus: "))
ini = int(input("Quantidade inicial de leucocitos: "))
P_cop = float(input("Insira o percentual  de virius: "))
P_ini = float(input("Insira o percentual de leucocitos: "))

i = 0  #Var. Cont.

while(ini < 2 * cop):
	x = cop * P_cop / 100
	z = cop + x
	y = ini * P_ini / 100
	k = ini + y
	i = i + 1
	if(k >= 2 * z):
	print(i)	
	
	
	
-- ERROR:
File "XXXX", line 15
    print(i)	
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:32:42) 
-- CODE:
cop = int(input("Insira a quantidade de virus: "))
ini = int(input("Quantidade inicial de leucocitos: "))
P_cop = float(input("Insira o percentual  de virius: "))
P_ini = float(input("Insira o percentual de leucocitos: "))

i = 0  #Var. Cont.

while(ini < 2 * cop):
	x = cop * P_cop / 100
	z = cop + x
	y = ini * P_ini / 100
	k = ini + y
	i = i + 1
	if(k >= 2 * z):
	print(i)	
	
	
	
-- ERROR:
File "XXXX", line 15
    print(i)	
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:32:43) 
-- CODE:
cop = int(input("Insira a quantidade de virus: "))
ini = int(input("Quantidade inicial de leucocitos: "))
P_cop = float(input("Insira o percentual  de virius: "))
P_ini = float(input("Insira o percentual de leucocitos: "))

i = 0  #Var. Cont.

while(ini < 2 * cop):
	x = cop * P_cop / 100
	z = cop + x
	y = ini * P_ini / 100
	k = ini + y
	i = i + 1
	if(k >= 2 * z):
	print(i)	
	
	
	
-- ERROR:
File "XXXX", line 15
    print(i)	
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:32:55) 
-- CODE:
cop = int(input("Insira a quantidade de virus: "))
ini = int(input("Quantidade inicial de leucocitos: "))
P_cop = float(input("Insira o percentual  de virius: "))
P_ini = float(input("Insira o percentual de leucocitos: "))

i = 0  #Var. Cont.

while(ini < 2 * cop):
	x = cop * P_cop / 100
	z = cop + x
	y = ini * P_ini / 100
	k = ini + y
	i = i + 1
	if(k >= 2 * z):
		print(i)	
	
	
	
-- ERROR:
File "XXXX", line 15
    print(i)	
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:33:14) 
-- CODE:
cop = int(input("Insira a quantidade de virus: "))
ini = int(input("Quantidade inicial de leucocitos: "))
P_cop = float(input("Insira o percentual  de virius: "))
P_ini = float(input("Insira o percentual de leucocitos: "))

i = 0  #Var. Cont.

while(ini < 2 * cop):
	x = cop * P_cop / 100
	z = cop + x
	y = ini * P_ini / 100
	k = ini + y
	i = i + 1
	if(k >= 2 * z):
print(i)	
	
	
	
-- EXECUTION TIME:
0.296093
-- ERROR:
  File "/home/codebench/codes/1712/2504/main.py", line 15
    print(i)	
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:33:15) 
-- CODE:
cop = int(input("Insira a quantidade de virus: "))
ini = int(input("Quantidade inicial de leucocitos: "))
P_cop = float(input("Insira o percentual  de virius: "))
P_ini = float(input("Insira o percentual de leucocitos: "))

i = 0  #Var. Cont.

while(ini < 2 * cop):
	x = cop * P_cop / 100
	z = cop + x
	y = ini * P_ini / 100
	k = ini + y
	i = i + 1
	if(k >= 2 * z):
print(i)	
	
	
	
-- ERROR:
File "XXXX", line 15
    print(i)	
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:33:15) 
-- CODE:
cop = int(input("Insira a quantidade de virus: "))
ini = int(input("Quantidade inicial de leucocitos: "))
P_cop = float(input("Insira o percentual  de virius: "))
P_ini = float(input("Insira o percentual de leucocitos: "))

i = 0  #Var. Cont.

while(ini < 2 * cop):
	x = cop * P_cop / 100
	z = cop + x
	y = ini * P_ini / 100
	k = ini + y
	i = i + 1
	if(k >= 2 * z):
print(i)	
	
	
	
-- EXECUTION TIME:
0.224882
-- ERROR:
  File "/home/codebench/codes/1712/2504/main.py", line 15
    print(i)	
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:33:16) 
-- CODE:
cop = int(input("Insira a quantidade de virus: "))
ini = int(input("Quantidade inicial de leucocitos: "))
P_cop = float(input("Insira o percentual  de virius: "))
P_ini = float(input("Insira o percentual de leucocitos: "))

i = 0  #Var. Cont.

while(ini < 2 * cop):
	x = cop * P_cop / 100
	z = cop + x
	y = ini * P_ini / 100
	k = ini + y
	i = i + 1
	if(k >= 2 * z):
print(i)	
	
	
	
-- EXECUTION TIME:
0.478374
-- ERROR:
  File "/home/codebench/codes/1712/2504/main.py", line 15
    print(i)	
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:33:16) 
-- CODE:
cop = int(input("Insira a quantidade de virus: "))
ini = int(input("Quantidade inicial de leucocitos: "))
P_cop = float(input("Insira o percentual  de virius: "))
P_ini = float(input("Insira o percentual de leucocitos: "))

i = 0  #Var. Cont.

while(ini < 2 * cop):
	x = cop * P_cop / 100
	z = cop + x
	y = ini * P_ini / 100
	k = ini + y
	i = i + 1
	if(k >= 2 * z):
print(i)	
	
	
	
-- EXECUTION TIME:
0.390237
-- ERROR:
  File "/home/codebench/codes/1712/2504/main.py", line 15
    print(i)	
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:37:25) 
-- CODE:
qv = int(input("Insira a quantidade de virus: "))
ql int(input("Quantidade inicial de leucocitos: "))
pv float(input("Insira o percentual  de virius: "))
pl float(input("Insira o percentual de leucocitos: "))

i = 0  #Var. Cont.

while(ql < 2 * qv):
	x = qv * pv / 100
	qv = qv + x
	y = ql * pl / 100
	ql = ql + y
	i = i + 1
	if(ql >= 2 * qv):
		print(i)	
	
	
	
-- ERROR:
File "XXXX", line 2
    ql int(input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:37:26) 
-- CODE:
qv = int(input("Insira a quantidade de virus: "))
ql int(input("Quantidade inicial de leucocitos: "))
pv float(input("Insira o percentual  de virius: "))
pl float(input("Insira o percentual de leucocitos: "))

i = 0  #Var. Cont.

while(ql < 2 * qv):
	x = qv * pv / 100
	qv = qv + x
	y = ql * pl / 100
	ql = ql + y
	i = i + 1
	if(ql >= 2 * qv):
		print(i)	
	
	
	
-- ERROR:
File "XXXX", line 2
    ql int(input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:37:27) 
-- CODE:
qv = int(input("Insira a quantidade de virus: "))
ql int(input("Quantidade inicial de leucocitos: "))
pv float(input("Insira o percentual  de virius: "))
pl float(input("Insira o percentual de leucocitos: "))

i = 0  #Var. Cont.

while(ql < 2 * qv):
	x = qv * pv / 100
	qv = qv + x
	y = ql * pl / 100
	ql = ql + y
	i = i + 1
	if(ql >= 2 * qv):
		print(i)	
	
	
	
-- ERROR:
File "XXXX", line 2
    ql int(input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:37:27) 
-- CODE:
qv = int(input("Insira a quantidade de virus: "))
ql int(input("Quantidade inicial de leucocitos: "))
pv float(input("Insira o percentual  de virius: "))
pl float(input("Insira o percentual de leucocitos: "))

i = 0  #Var. Cont.

while(ql < 2 * qv):
	x = qv * pv / 100
	qv = qv + x
	y = ql * pl / 100
	ql = ql + y
	i = i + 1
	if(ql >= 2 * qv):
		print(i)	
	
	
	
-- ERROR:
File "XXXX", line 2
    ql int(input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:37:28) 
-- CODE:
qv = int(input("Insira a quantidade de virus: "))
ql int(input("Quantidade inicial de leucocitos: "))
pv float(input("Insira o percentual  de virius: "))
pl float(input("Insira o percentual de leucocitos: "))

i = 0  #Var. Cont.

while(ql < 2 * qv):
	x = qv * pv / 100
	qv = qv + x
	y = ql * pl / 100
	ql = ql + y
	i = i + 1
	if(ql >= 2 * qv):
		print(i)	
	
	
	
-- ERROR:
File "XXXX", line 2
    ql int(input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:37:29) 
-- CODE:
qv = int(input("Insira a quantidade de virus: "))
ql int(input("Quantidade inicial de leucocitos: "))
pv float(input("Insira o percentual  de virius: "))
pl float(input("Insira o percentual de leucocitos: "))

i = 0  #Var. Cont.

while(ql < 2 * qv):
	x = qv * pv / 100
	qv = qv + x
	y = ql * pl / 100
	ql = ql + y
	i = i + 1
	if(ql >= 2 * qv):
		print(i)	
	
	
	
-- ERROR:
File "XXXX", line 2
    ql int(input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:38:04) 
-- CODE:
qv = int(input("Insira a quantidade de virus: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Insira o percentual  de virius: "))
pl = float(input("Insira o percentual de leucocitos: "))

i = 0  #Var. Cont.

while(ql < 2 * qv):
	x = qv * pv / 100
	qv = qv + x
	y = ql * pl / 100
	ql = ql + y
	i = i + 1
	if(ql >= 2 * qv):
		print(i)	
	
	
	
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:38:17) 
-- CODE:
qv = int(input("Insira a quantidade de virus: "))
ql = int(input("Quantidade inicial de leucocitos: "))
pv = float(input("Insira o percentual  de virius: "))
pl = float(input("Insira o percentual de leucocitos: "))

i = 0  #Var. Cont.

while(ql < 2 * qv):
	x = qv * pv / 100
	qv = qv + x
	y = ql * pl / 100
	ql = ql + y
	i = i + 1
	if(ql >= 2 * qv):
		print(i)	
	
	
	
-- EXECUTION TIME:
0.209129
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
